--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,26 +1,36 @@
-<h1> Birthday Calculator </h1>
-<form action="/details" method="POST">
-  <label for="name">Name: </label>
-  <input type="text" name="name">
+<link rel="stylesheet" type="text/css" href="/css/style.css"/>
+<body>
+  <div id = "allcontent">
+    <h1> Birthday Calculator </h1>
+    <form action="/details" method="POST">
+      <div>
+      <label for="name">Name: </label>
+      <input type="text" name="name"maxlength="19" size="19">
+      </div>
 
-  <label for="day">Day:</label>
-  <input type="text" name="day">
+      <div>
+        <label for="day">Day:</label>
+        <input type="text" name="day" maxlength="2" size="2">
 
-  <label for="month">Month:</label>
-  <select name="month">
-    <option value = "January"> January </option>
-    <option value = "February"> February </option>
-    <option value = "March"> March </option>
-    <option value = "April"> April </option>
-    <option value = "May"> May </option>
-    <option value = "June"> June </option>
-    <option value = "July"> July </option>
-    <option value = "August"> August </option>
-    <option value = "September"> September </option>
-    <option value = "October"> October </option>
-    <option value = "November"> November </option>
-    <option value = "December"> December </option>
-  </select>
 
-  <input type="submit" value="Submit">
-</form>
+        <label for="month">Month:</label>
+        <select name="month">
+          <option value = 1> January </option>
+          <option value = 2> February </option>
+          <option value = 3> March </option>
+          <option value = 4> April </option>
+          <option value = 5> May </option>
+          <option value = 6> June </option>
+          <option value = 7> July </option>
+          <option value = 8> August </option>
+          <option value = 9> September </option>
+          <option value = 10> October </option>
+          <option value = 11> November </option>
+          <option value = 12> December </option>
+        </select>
+      </div>
+
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+</body>
